--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<!-- use 2.9.1 for Java 7 projects -->
+			<version>3.20.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
